--- a/Gallery.html
+++ b/Gallery.html
@@ -20,8 +20,7 @@
 </nav>
 
 <section class="gallery">
-    <img src=  "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGt0vQcqxWY_FU_bvx3pRMDC9Bx7gRJSYZDw&s" alt="Robotics Project">
-    <img src=  "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3z5mNyu1vBKnCG1AavcbUqFABgzKJCM0Isw&s" alt="Coding Project">
+    <img src=  "robotics.jpg"  alt="Robotics Project">
 
 </section>
 
@@ -31,3 +30,4 @@
 
 </body>
 </html>
+
